tests/NormalTests/paczka1/fuzzy1/73088201.err
Error in line 12: S334 S334 99,8
Error in line 15: sOxkBA S334 37,6
Error in line 8: DNHu2M S334 85,3
